tests/baselines/reference/targetTypeVoidFunc.errors.txt
tests/cases/compiler/targetTypeVoidFunc.ts(2,5): error TS2322: Type '() => 无值' is not assignable to type '新建 () => 数字'.
  Type '() => 无值' provides no match for the signature 'new (): number'.


==== tests/cases/compiler/targetTypeVoidFunc.ts (1 errors) ====
    function f1(): { new (): number; } {
        return function () { return; }
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '() => 无值' is not assignable to type '新建 () => 数字'.
!!! error TS2322:   Type '() => 无值' provides no match for the signature 'new (): number'.
    }; 
    
    var x = f1();
    var y = new x();
    var z = new (f1())();